     sloppiness because of this ABI repair.
     lots of discussion with kettenis
   - djm@cvs.openbsd.org 2008/03/25 11:58:02
     [session.c sshd_config.5]
     ignore ~/.ssh/rc if a sshd_config ForceCommand is specified;
     from dtucker@ ok deraadt@ djm@
   - djm@cvs.openbsd.org 2008/03/25 23:01:41
     [session.c]
     last patch had backwards test; spotted by termim AT gmail.com

20080315
 - (djm) [regress/test-exec.sh] Quote putty-related variables in case they are
   empty; report and patch from Peter Stuge
 - (djm) [regress/test-exec.sh] Silence noise from detection of putty
   commands; report from Peter Stuge
 - (djm) [session.c] Relocate incorrectly-placed closefrom() that was causing
   crashes when used with ChrootDirectory

20080314
 - (tim) [regress/sftp-cmds.sh] s/cd/lcd/ in lls test. Reported by
   vinschen at redhat.com. Add () to put echo commands in subshell for lls test
   I mistakenly left out of last commit.
 - (tim) [regress/localcommand.sh] Shell portability fix. Reported by imorgan at
   nas.nasa.gov

20080313
 - (djm) [Makefile.in regress/Makefile] Fix interop-tests target (note to
   self: make changes to Makefile.in next time, not the generated Makefile).
 - (djm) [Makefile.in regress/test-exec.sh] Find installed plink(1) and
   puttygen(1) by $PATH
 - (tim) [scp.c] Use poll.h if available, fall back to sys/poll.h if not. Patch
   by vinschen at redhat.com.
 - (tim) [regress/sftp-cmds.sh regress/ssh2putty.sh] Shell portability fixes
   from vinschen at redhat.com and imorgan at nas.nasa.gov

20080312
 - (djm) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/10/29 06:57:13
     [regress/Makefile regress/localcommand.sh]
     Add simple regress test for LocalCommand; ok djm@
   - jmc@cvs.openbsd.org 2007/11/25 15:35:09
     [regress/agent-getpeereid.sh regress/agent.sh]
     more existant -> existent, from Martynas Venckus;
     pfctl changes: ok henning
     ssh changes: ok deraadt
   - djm@cvs.openbsd.org 2007/12/12 05:04:03